--- a/web/src/main/resources/static/index.html
+++ b/web/src/main/resources/static/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hospital Management Platform Test Page</title>
+	<title>Hospital Management Platform - Welcome</title>
 	<!-- Required meta tags -->
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -9,8 +9,6 @@
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 	<link rel="stylesheet" href="style.css" />
-	<script type="text/javascript" src="patients.js"></script>
-<!--	<link rel="stylesheet" type="text/css" href="style.css" />-->
 </head>
 <body>
 <div align="center">
@@ -23,17 +21,17 @@
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
 			<ul class="navbar-nav mr-auto">
 				<li class="nav-item active">
-					<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+					<a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="/">Patients</a>
+					<a class="nav-link" href="/patient.html">Patients</a>
 				</li>
 				<li class="nav-item dropdown">
 					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 						Settings
 					</a>
 					<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-						<a class="dropdown-item" href="#">Action</a>
+						<a class="dropdown-item" href="/role.html">Roles</a>
 						<a class="dropdown-item" href="#">Another action</a>
 						<div class="dropdown-divider"></div>
 						<a class="dropdown-item" href="#">Something else here</a>
@@ -43,43 +41,13 @@
 					<a class="nav-link disabled" href="#">Disabled</a>
 				</li>
 			</ul>
-			<form id="searchForm" class="form-inline my-2 my-lg-0">
-				<input class="form-control mr-sm-2" id="search" type="search" placeholder="Search" aria-label="Search">
-			</form>
-			<button id="search-form" class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
 		</div>
 	</nav>
-	<h1>Hospital Management Platform Test Page</h1>
+	<h1>Hospital Management Platform - Welcome</h1>
 	<div>
-		<form id="addPatient">
-			<div class="form-group row">
-				<label for="firstname" class="col-sm-2 col-form-label">Firstname</label>
-				<div class="col-sm-10">
-					<input type="text" class="form-control" id="firstname" aria-describedby="firstnameHelp" placeholder="Enter firstname">
-				</div>
-			</div>
-			<div class="form-group row">
-				<label for="lastname" class="col-sm-2 col-form-label">Lastname</label>
-				<div class="col-sm-10">
-					<input type="text" class="form-control" id="lastname" aria-describedby="lastnameHelp" placeholder="Enter lastname">
-				</div>
-			</div>
-			<div class="form-group row">
-				<label for="email" class="col-sm-2 col-form-label">Email address</label>
-				<div class="col-sm-10">
-					<input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="name@example.com">
-				</div>
-			</div>
-		</form>
-		<button type="submit" id="submit-form">Submit</button>
+
 	</div>
 
-	<table class="table table-striped" id="allPatients">
-
-	</table>
-
-
-	<div id="errorMessage"/>
 </div>
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS-->
