--- a/web/src/main/resources/static/index.html
+++ b/web/src/main/resources/static/index.html
@@ -67,7 +67,19 @@
 			<div class="form-group row">
 				<label for="email" class="col-sm-2 col-form-label">Email address</label>
 				<div class="col-sm-10">
-					<input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="name@example.com">
+					<input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="email">
+				</div>
+			</div>
+			<div class="form-group row">
+				<label for="phoneNumber" class="col-sm-2 col-form-label">Phone Number</label>
+				<div class="col-sm-10">
+					<input type="text" class="form-control" id="phoneNumber" aria-describedby="phoneNumber" placeholder="phoneNumber">
+				</div>
+			</div>
+			<div class="form-group row">
+				<label for="address" class="col-sm-2 col-form-label">Home address</label>
+				<div class="col-sm-10">
+					<input type="text" class="form-control" id="address" aria-describedby="addressHelp" placeholder="address">
 				</div>
 			</div>
 		</form>
