--- a/web/src/main/resources/static/patient.html
+++ b/web/src/main/resources/static/patient.html
@@ -70,6 +70,18 @@
 					<input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="name@example.com">
 				</div>
 			</div>
+			<div class="form-group row">
+				<label for="phoneNumber" class="col-sm-2 col-form-label">Phone Number</label>
+				<div class="col-sm-10">
+					<input type="text" class="form-control" id="phoneNumber" aria-describedby="phoneNumber" placeholder="phoneNumber">
+				</div>
+			</div>
+			<div class="form-group row">
+				<label for="address" class="col-sm-2 col-form-label">Home address</label>
+				<div class="col-sm-10">
+					<input type="text" class="form-control" id="address" aria-describedby="addressHelp" placeholder="address">
+				</div>
+			</div>
 		</form>
 		<button type="submit" id="submit-form">Submit</button>
 	</div>
