--- a/web/src/main/resources/static/user.html
+++ b/web/src/main/resources/static/user.html
@@ -34,7 +34,7 @@
 					</a>
 					<div class="dropdown-menu" aria-labelledby="navbarDropdown">
 						<a class="dropdown-item" href="/role.html">Roles</a>
-						<a class="dropdown-item" href="#">Another action</a>
+						<a class="dropdown-item" href="/user.html">Users</a>
 						<div class="dropdown-divider"></div>
 						<a class="dropdown-item" href="#">Something else here</a>
 					</div>
@@ -61,7 +61,7 @@
 			<div class="form-group row">
 				<label for="role" class="col-sm-2 col-form-label">Role</label>
 				<div class="col-sm-10">
-					<input type="text" class="form-control" id="role" aria-describedby="roleHelp" placeholder="Enter role">
+					<input type="text" class="form-control" id="role" aria-describedby="roleHelp" placeholder="Select role">
 				</div>
 			</div>
 		</form>
